Refactor. Handle multiple sounds and playlists